Fixed issue with footer not aligned at bottom of the screen. Including checks for asking user to save Summary before changing book or part or chapter

--- a/src/app/summary/summary.component.css
+++ b/src/app/summary/summary.component.css
@@ -1,3 +1,31 @@
+html {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 99vh;
+  font-family: Arial, sans-serif;
+}
+
+.page-wrapper {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: black;
+}
+
+.logo-content {
+  justify-items: center;
+}
+
+.content {
+  text-align: center;
+}
+
 html, body {
   margin: 0;
   padding: 0;
@@ -18,15 +46,15 @@ html, body {
 }
 
 .summary-radio-row {
+  margin-top: 15px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .main-grid-col-12 {
-  
   display: flex;
   flex-direction: column;
   justify-self: center;
@@ -38,29 +66,31 @@ html, body {
   /*border: 3px solid #000;
   border-radius: 6px;*/
   justify-self: center;
-  background: #000; /* Black background */
-    color: #eee;      /* Light text for contrast */
+  /* Black background */
+  color: #eee;
+  /* Light text for contrast */
 }
 
 .chapter-row {
   display: grid;
-  grid-template-columns: 1fr; 
+  grid-template-columns: 1fr;
   /*border: 4px solid rgb(65, 197, 4);
   border-radius: 6px;*/
   justify-content: center;
-  gap: 16px; 
+  gap: 16px;
 }
 
 .chapter-row-with-button {
   display: grid;
-  grid-template-columns: 1fr 1fr; 
+  grid-template-columns: 1fr 1fr;
   /*border: 4px solid rgb(65, 197, 4);
   border-radius: 6px;*/
   align-content: left;
-  gap: 16px; 
+  gap: 16px;
 }
 
 .main-grid-col-12-summary-1-2 {
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
   justify-self: center;
@@ -68,19 +98,21 @@ html, body {
 
 .summaries-row {
   display: grid;
-  grid-template-columns: 1fr 1fr; 
-  gap: 50px; 
+  grid-template-columns: 1fr 1fr;
+  gap: 50px;
 }
 
 .summary-with-msg {
   display: flex;
   flex-direction: column;
-  align-items: center;   /* center align both message + textarea */
+  align-items: center;
+  /* center align both message + textarea */
   width: 100%;
 }
 
 .summary-with-msg p-message {
-  margin-bottom: 10px;  /* spacing above textarea */
+  margin-bottom: 10px;
+  /* spacing above textarea */
 }
 
 .third-summaries-row {
